--- a/app/src/main/res/layout-land/item_movie.xml
+++ b/app/src/main/res/layout-land/item_movie.xml
@@ -9,6 +9,7 @@
 
     <ImageView
         android:id="@+id/ivPoster"
+        android:transitionName="ivPosterTransition"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -19,6 +20,7 @@
 
     <TextView
         android:id="@+id/textView"
+        android:transitionName="textViewTransition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -32,6 +34,7 @@
 
     <TextView
         android:id="@+id/tvOverview"
+        android:transitionName="tvOverviewTransition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
